Fixed text overflow and modal

--- a/components/epg/epg.less
+++ b/components/epg/epg.less
@@ -288,6 +288,7 @@
                 }
                 &-about {
                     width: calc(90% - 10px);
+                    overflow: hidden;
                 }
 
                 .channel-row--program---title {
