--- a/components/modal/epgModal.less
+++ b/components/modal/epgModal.less
@@ -39,6 +39,7 @@
         &-container {
             padding: 30px;
             .modal-header {
+                padding: 0 0 12px;
                 width: 100%;
                 display: flex;
                 display: -webkit-flex;
@@ -57,7 +58,7 @@
                 img {
                     width: 60px;
                     height: 60px;
-                    border-radius: 50%;
+                    border-radius: 5px;
                     // border: 2px solid @colorYellow;
                     padding: 4px;
                 }
@@ -90,6 +91,7 @@
             }
 
             .modal-footer {
+                padding: 12px 0;
                 cursor: pointer;
 
                 .watch {
